Bug 101309 - Crash in CALC: SdrObject::GetViewContact()
Summary: Crash in CALC: SdrObject::GetViewContact()
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-08-04 22:32 UTC by silvio
Modified: 2016-08-10 10:05 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["SdrObject::GetViewContact()"]


Attachments
Crashing file (3.26 MB, application/vnd.oasis.opendocument.spreadsheet)
2016-08-05 23:44 UTC, silvio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description silvio 2016-08-04 22:32:32 UTC
This bug was filed from the crash reporting server and is br-ce54b8ed-e48e-4427-b207-e82e3cad07e5.
=========================================
The crash happened in the opening process of a calc file with many formula calculation and a size of 3334 KB. It crashed before it was open. I used the same file with the same formulas in the last 7 years with all the LibreOffice versions without this problem. OpenCL is disabled.

An other crash with OpenCL enabled: crash reporting br-fcbdafca-b974-4b49-a4e2-a9a2bdcda398.
Comment 1 Aron Budea 2016-08-04 23:20:54 UTC
Can you please attach a sample spreadsheet that could be used to reproduce the crash?
Comment 2 silvio 2016-08-05 23:44:08 UTC
Created attachment 126623 [details]
Crashing file
Comment 3 Aron Budea 2016-08-06 01:09:03 UTC
Thanks!
I couldn't reproduce the crash myself either with OpenCL on or off (LibreOffice 5.2.0.4 / Windows 7), let's see if others have better luck with it.

I can see a performance regression when closing the file, and opened bug 101347 for that.
Comment 4 MM 2016-08-06 10:10:32 UTC
Unconfirmed with v5.1.5.2 under ubuntu 16.04 x64.
Confirmed with v5.2.0.4 under ubuntu 16.04 x64.
Confirmed with v5.2.0.4 under windows 10 x64.
Comment 5 MM 2016-08-06 10:18:24 UTC
When clearing the user profile, it does open the file though.
Comment 6 MM 2016-08-06 10:48:18 UTC
Seems the file crashes when 'Recalculation on file load' is set to 'Always Recalculate'.
Comment 7 Aron Budea 2016-08-07 16:07:44 UTC
Reproduced with v5.2.0.4 / Ubuntu 16.04.
Setting severity to critical, since it's a crash.
Comment 8 Commit Notification 2016-08-09 20:06:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d79a4f46926e81a6d0fe353feb3322673c1b509d

Resolves: tdf#101309 crash on deleted SdrObject

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2016-08-09 20:10:00 UTC
This is a regression from

commit 67f4b98b9833f0529cf62928b274ba9234853d2f
Date:   Sat Mar 12 03:35:39 2016 +0100

    fix memory leak in detective sdr objects

I believe
Comment 10 Commit Notification 2016-08-10 10:05:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5043795621f25047e166f112821d1f899252f7ce&h=libreoffice-5-2

Resolves: tdf#101309 crash on deleted SdrObject

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.